Refactor string processing and improve performance in various classes